--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,93 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Montserrat", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid balck;
+  margin: auto;
+  width: 50vw;
 }
+
+.contact {
+  color: #252b42;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+.appoint {
+  color: #252b42;
+  font-size: 40px;
+  font-weight: 700;
+  margin-top: 0;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.row {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.button {
+  border-radius: 5px;
+  color: white;
+  font-weight: 400;
+  background-color: #23a6f0;
+  padding: 15px 40px !important;
+  margin-top: 40px;
+  padding-top: 16px !important;
+  height: 58px;
+}
+
+.input {
+  border-radius: 4px;
+  border: 1px solid #e6e6e6;
+  padding: 12px 8px;
+  font-weight: 500;
+  color: #737373;
+}
+
+.select {
+  border-radius: 4px;
+  font-weight: 500;
+  color: #737373;
+  width: 100%;
+  height: 48px;
+}
+
+#textarea {
+  max-width: 97%;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+@media (max-width: 1200px) {
+  .form {
+    width: 60vw;
+  }
+}
+
+@media (max-width: 1000px) {
+  .input,
+  .select {
+    margin-bottom: 20px;
+  }
+
+  .row {
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .form {
+    width: 80vw;
+  }
+}
+
+/* button padding */
+/* textarea width */
